# YOLO-to-DALI-CUDA

./: .gitignore  README.md  performance.md  pyproject.toml
ultralytics/: __init__.py
ultralytics/data/: base.py  build.py
ultralytics_dali/: __init__.py
ultralytics_dali/data/: augment.py  base.py  build.py  dali_loader.py  dali_pipeline.py  dataset.py  profiler.py
ultralytics_dali/regression/: __init__.py  regression_common.py  regression_dataset_parity.py  regression_report.py  regression_spec.template.yaml  regression_train_eval.py
